--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>DOMO | Diego Rodríguez</title>
   </head>
   <body>
     <div id="root"></div>
